--- a/Scss/Base settings/_base.colors.scss
+++ b/Scss/Base settings/_base.colors.scss
@@ -7,3 +7,9 @@ $color-light-orange: rgba(219, 122, 87, 1);
 $color-light-green: rgba(0, 184, 165, 1);
 $color-light-blue: rgba(7, 143, 197, 1);
 $color-light-black: rgba(14, 19, 26, 1);
+
+$russian-violet: rgba(56, 0, 54, 1);
+$international-orange-engineering: rgba(186, 18, 0, 1);
+$saffron: rgba(248, 197, 55, 1);
+$sapphire-blue: rgba(26, 101, 158, 1);
+$medium-turquoise: rgba(0, 207, 193, 1);
