--- a/Scss/Base settings/_base.settings.scss
+++ b/Scss/Base settings/_base.settings.scss
@@ -6,7 +6,7 @@
 
 
   //////////////
- // Spaceing //
+ // Spacing  //
 //////////////
 $base-space-unit: 2vw;
 
@@ -17,17 +17,6 @@ $space-unit-large: $base-space-unit * 1.5;
 $space-unit-larger: $base-space-unit * 2;
 $space-unit-largest: $base-space-unit * 3;
 
-
-  /////////////////
- // Header size //
-/////////////////
-
-$header-size-1: $base-font-size * 1.5;
-$header-size-2: $base-font-size * 1.3;
-$header-size-3: $base-font-size * 1.2;
-$header-size-4: $base-font-size;
-$header-size-5: $base-font-size *0.9;
-$header-size-6: $base-font-size * 0.8;
 
 
 
