--- a/Css/Projects.css
+++ b/Css/Projects.css
@@ -377,24 +377,26 @@ img {
 }
 
 a {
-  font-size: 1.2vw;
+  font-size: 1.8vw;
 }
 
 .project {
   text-align: center;
   align-content: center;
-  font-size: 4.5vw;
 }
 .project blockquote {
-  font-size: 1.2vw;
-  margin-top: 2vw;
+  font-size: 1.8vw;
+  margin-top: 12vw;
   text-align: left;
   display: inline-block;
-  line-height: 2vw;
+  line-height: 4vw;
 }
 .project mark {
   color: #00b8a5;
-  font-size: 1.2vw;
+  font-size: 2.16vw;
+}
+.project p {
+  font-size: 4.5vw;
 }
 
 .mask-detection {
